# phone-similarity

./: .gitignore  AGENTS.md  PERF_IDEAS.md  README.md  TODO.md  cronjob.yaml  get_entropies.py  init-demo.yaml  model_card.md  profile_hotpaths.py  pyproject.toml  random_job.yaml  setup.py
.github/workflows/: ci.yml  release.yaml
logs/: english_oronyms_d015.tsv  wikipedia_word_windows.txt
notebooks/: cognate_filter_eval_report.json  pun_candidates_llm_adjudicated.jsonl  pun_candidates_llm_adjudicated_integrated.jsonl  pun_candidates_manual_review_llm.jsonl  pun_candidates_manual_review_llm_integrated.jsonl  pun_candidates_noncognate.jsonl  pun_candidates_noncognate_llm.jsonl  pun_candidates_removed_cognates_integrated.jsonl  pun_candidates_removed_cognates_llm.jsonl  pun_cognate_gold_labels.jsonl  pun_pipeline_report_multilingual_500each.json  wikipedia_pun_mining_multilingual_500each_llm_queue_integrated.jsonl
scripts/: build_gold_cognate_labels.py  evaluate_cognate_filter.py  export_onnx.py  filter_cognates_llm.py  filter_pun_candidates.py  pun_evaluation.py  wikipedia_pun_mining.py  wikipedia_pun_mining_multilingual.py
src/phone_similarity/: __init__.py  _beam_cpp.cpp  _beam_cpp.pyi  _core.pxd  _core.pyi  _core.pyx  _dispatch.py  base_bit_array_specification.py  beam_search.py  bit_array_specification.py  clean_phones.py  coarticulation.py  cross_language.py  dictionary_scan.py  distance.py  distance_class.py  embedding.py  gpu_rescore.py  intersecting_bit_array_specification.py  inversion.py  model_factory.py  phones_product.py  pretokenize.py  primitives.py  raw_phone_features.py  syllable.py  universal_features.py  utils.py
src/phone_similarity/analysis/: __init__.py  entropy.py
src/phone_similarity/distance/: __init__.py
src/phone_similarity/encoding/: __init__.py
src/phone_similarity/g2p/: __init__.py
src/phone_similarity/g2p/charsiu/: README.md  __init__.py  charsiu_data_form.csv  generator.py  load_dictionary.py
src/phone_similarity/language/: README.md  __init__.py  _data.json  _loader.py  ady.py  afr.py  amh.py  ang.py  ara.py  arg.py  arm_e.py  arm_w.py  aze.py  bak.py  bel.py  bos.py  bul.py  bur.py  cat.py  combined.py  cze.py  dan.py  de.py  dut.py  egy.py  eng_uk.py  eng_us.py  enm.py  epo.py  est.py  eus.py  fas.py  fin.py  fra.py  fra_qu.py  geo.py  ger.py  gle.py  glg.py  grc.py  (+65 more)
src/phone_similarity/search/: __init__.py
tests/: test_beam_search.py  test_bits_per_word.py  test_charisu_g2p.py  test_charsiu_dictionary_metrics.py  test_charsiu_research_gate.py  test_coarticulation.py  test_cognates.py  test_cross_language.py  test_distance.py  test_embedding.py  test_filter_cognates_llm.py  test_finnish_length.py  test_french_dictionary_metrics.py  test_g2p_batched.py  test_generator_caching.py  test_gpu_rescore.py  test_language_comparison.py  test_language_entropies.py  test_language_phonemes.py  test_longer_words.py  test_max_syllable_length.py  test_model_factory.py  test_parsing.py  test_phoneme_features.py  test_phonetic_consistency.py  test_pun_collection.py  test_splitting.py  test_stress.py  test_syllable.py  test_tonal_languages.py  test_universal_features.py
