[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0", "numpy>=1.24"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-similarity"
version = "0.0.2"
description = "A library dedicated to providing phonological distance and similarity metrics."
authors = [{name = "Kleber Noel"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9,<4"
keywords = ["phone", "phonological", "phonetic", "similarity", "ipa", "phonetics", "distance", "bitarray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "bitarray",
    "langcodes[data]",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/klebster2/phono-sim"
Repository = "https://github.com/klebster2/phono-sim"
Issues = "https://github.com/klebster2/phono-sim/issues"

[project.optional-dependencies]
g2p = [
    "requests",
    "transformers>=4.34",
    "optimum[onnxruntime]>=1.17",
]
alignment = [
    "jiwer>=4",
]
dev = [
    "Cython>=3.0",
    "pytest>=7",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"phone_similarity" = ["*.pyx", "*.pxd", "*.pyi", "py.typed"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line length (handled by formatter)
    "SIM108", # ternary operator (readability in Cython compat)
    "UP007",  # X | Y union syntax (need to support 3.9)
]

[tool.ruff.lint.per-file-ignores]
"src/phone_similarity/language/*.py" = ["E741", "RUF001"]  # language data files
"src/phone_similarity/base_bit_array_specification.py" = ["B019", "RUF002"]  # lru_cache on methods is intentional; IPA chars in docstrings
"src/phone_similarity/g2p/charsiu/generator.py" = ["B019"]  # lru_cache on methods is intentional
"tests/*" = ["F811", "RUF001", "RUF002", "RUF003", "E701", "E402", "B007"]  # pytest fixtures; IPA chars; style in tests

[tool.ruff.lint.isort]
known-first-party = ["phone_similarity"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
